# habit-reward

./: .clinerules  .env.caddy.example  .env.example  .gitignore  AGENTS.md  CLAUDE.md  COMPREHENSIVE_TEST_PLAN.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_README.md  DEPLOYMENT_STRUCTURE.md  DEPLOYMENT_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  MULTI_PLATFORM_ROADMAP.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RULES.md  SECURITY.md  TEST_AUTOMATION_SUMMARY.md  TEST_CASES.md  TODO.md  asgi.py  db.sqlite3  main.py  manage.py  pyproject.toml  run_bot.sh  run_dashboard.sh
.claude/: settings.local.json
.claude/agents/: planner.md
.claude/commands/: await-review-iterate.md  code-review.md  review-all.md  review-commit.md  review-fix-loop-staged.md  review-staged.md
.claude/rules/: code-style.md  project.md  workflows.md
.github/workflows/: autofix.yml  check-pattern-sync.yml  claude-code-review.yml  deploy-caddy.yml  deploy.yml
commands/: ask_user_questions.md  plan_feature.md
deployment/: README.md
deployment/caddy/: Caddyfile
deployment/docker/: .env.production  Dockerfile  docker-compose.caddy.yml  docker-compose.prod.yml  docker-compose.yml
deployment/nginx/: Dockerfile  nginx.conf
deployment/scripts/: deploy-caddy.sh  deploy.sh  entrypoint.sh  local-test.sh
docs/: DEPLOYMENT.md  DEPLOYMENT_CHECKLIST_SIMPLE.md  DEPLOYMENT_QUICK_REFERENCE.md  DEPLOYMENT_STEP_BY_STEP.md  DEPLOYMENT_VISUAL_GUIDE.md  MANUAL_TESTING_GUIDE.md  MULTI_PLATFORM_ROADMAP.md  QUICK_START.md  TELEGRAM_WEBHOOK_NGROK_GUIDE.md  TEST_AUTOMATION_SUMMARY.md  TEST_CASES.md  WEBHOOK_QUICK_START.md  WEBHOOK_SETUP_SUMMARY.md  new prompt.md
docs/features/: 0001_PLAN.md  0001_REVIEW.md  0002_PLAN.md  0002_REVIEW.md  0003_PLAN.md  0003_REVIEW.md  0004_PLAN.md  0004_REVIEW.md  0005_FIXES.md  0005_PLAN.md  0005_REVIEW.md  0006_PLAN.md  0006_REVIEW.md  0007_PLAN.md  0008_PLAN.md  0008_REVIEW.md  0009_PLAN.md  0009_REVIEW.md  0010_PLAN.md  0010_REVIEW.md  0011_PLAN.md  0011_REVIEW.md  0012_PLAN.md  0013_PLAN.md  0013_REVIEW.md  0014_BUGFIX.md  0014_MANUAL_TESTS.md  0014_PLAN.md  0014_REVIEW.md  0015_MANUAL_TEST.md  0015_PLAN.md  0015_REVIEW.md  0016_PLAN.md  0016_REVIEW.md  0017_PLAN.md  0017_REVIEW.md  0018_PLAN.md  0019_PLAN.md  0019_TESTING.md  0020_MANUAL_TESTS.md  (+56 more)
docs/simple-deployment/: 0020_REVIEW.md  PLAN.md
frontend/: package-lock.json  package.json  vite.config.js
frontend/public/: site.webmanifest
frontend/src/: animations.css  app.css  main.js  nprogress.css
frontend/tests/: HabitCardContent.spec.js  Layout.spec.js  Login.spec.js  analytics.spec.js  themeAnimation.spec.js  themes.spec.js
scripts/: README.md  check_validation_sync.sh  create_admin_user.py  fix_allowed_hosts.py  reset_admin_password.py  set_webhook.py  start_webhook_dev.sh  test_50_percent_no_reward.py  test_api.sh  test_auth_api.sh  test_webhook.py  verify_telegram_widget_sri.sh
scripts/csp-smoke/: README.md  diagnose-console.mjs  diagnose-injections.mjs  diagnose-mutations.mjs  diagnose-violation-details.mjs  extract-nprogress-css.mjs  package.json  run-authed.mjs  run.mjs
src/: config.py
src/airtable/: base_repository.py  client.py  habit_repository.py  repositories.py  repositories_new.py  reward_repository.py  user_repository.py
src/api/: __init__.py  config.py  exceptions.py  main.py
src/bot/: formatters.py  keyboards.py  language.py  main.py  message_utils.py  messages.py  navigation.py  timezone_utils.py  webhook_handler.py
src/core/: __init__.py  admin.py  apps.py  models.py  repositories.py
src/dashboard/: app.py
src/habit_reward_project/: __init__.py  asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
src/models/: analytics.py  habit.py  habit_completion_result.py  habit_log.py  habit_revert_result.py  reward.py  reward_progress.py  user.py
src/realtime/: manager.py  websocket.py
src/services/: analytics_service.py  audit_log_service.py  habit_service.py  nlp_service.py  reward_service.py  streak_service.py
src/templates/: base.html
src/utils/: async_compat.py  logging.py
src/web/: checks.py  context_processors.py  middleware.py  urls.py  urls_auth.py
staticfiles/: staticfiles.json
tasks/: lessons.md  todo.md
tests/: README_AUDIT_LOG_TESTS.md  conftest.py  test_admin_actions.py  test_audit_logs.py  test_backdate_habit.py  test_bot_handlers.py  test_claimed_rewards.py  test_habit_duplicate.py  test_habit_edit_duplicate.py  test_habit_edit_skip.py  test_habit_service.py  test_repositories.py  test_reward_filtering.py  test_reward_service.py  test_streak_service.py
tests/api/: conftest.py  test_analytics.py  test_api_key_auth.py  test_auth.py  test_habit_logs.py  test_habits.py  test_rewards.py  test_streaks.py  test_users.py
tests/bot/: test_api_key_auto_delete.py  test_habit_done_yesterday_confirmation.py  test_timezone_utils.py
tests/realtime/: test_manager.py  test_service_notifications.py  test_websocket.py
tests/services/: test_analytics_service.py  test_habit_service_timezone.py  (+1 more)
(+135 files in other folders)
