[project]
name = "habit-reward"
version = "1.0.0"
description = "Gamified habit-reward system with Telegram bot and Streamlit dashboard"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
keywords = ["habit", "tracking", "gamification", "telegram", "bot", "rewards"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-telegram-bot[job-queue]>=20.6",
    "openai>=1.3.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",  # Kept for compatibility
    "streamlit>=1.28.0",
    "python-dotenv>=1.0.0",
    "plotly>=5.18.0",
    "pandas>=2.1.0",
    # Django dependencies
    "django>=5.0",
    "psycopg2-binary>=2.9",  # PostgreSQL adapter (for future use)
    "dj-database-url>=2.1",
    "django-environ>=0.11",
    "whitenoise>=6.6.0",  # Serve static files in production
    # REST API dependencies
    "python-jose[cryptography]>=3.3.0",  # JWT encoding/decoding
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-django>=4.5.0",
]

[project.scripts]
habit-bot = "src.bot.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-django>=4.5.0",
    "ruff>=0.14.1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "src.habit_reward_project.settings_test"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--reuse-db"
# Automatically mark all tests as using the database
markers = [
    "django_db: mark test as requiring database access",
    "local_only: mark test to run ONLY locally, skip in CI/CD (deselect with '-m \"not local_only\"')",
]
